[gd_scene load_steps=10 format=3 uid="uid://bsccrdik2xw6g"]

[ext_resource type="PackedScene" uid="uid://birgplsretasp" path="res://test_game_base.tscn" id="1_8beo2"]
[ext_resource type="Script" path="res://second_game_scene.gd" id="1_eojps"]
[ext_resource type="PackedScene" uid="uid://d1xumg0b4ounb" path="res://ghost.tscn" id="2_idu52"]
[ext_resource type="PackedScene" uid="uid://b6o05k2nltc0o" path="res://energy.tscn" id="4_cgumm"]
[ext_resource type="PackedScene" uid="uid://b5kl8krwb1jr0" path="res://memory_attempt1.tscn" id="4_o05bu"]
[ext_resource type="PackedScene" uid="uid://bgpbdyb6weu20" path="res://trial_memory_2.tscn" id="6_g3u1m"]

[sub_resource type="Animation" id="Animation_ejbjx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(184, 349)]
}

[sub_resource type="Animation" id="Animation_shdmh"]
resource_name = "move_the_damn_ball"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.03333, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(184, 349), Vector2(751, 257), Vector2(407, 595), Vector2(295, 436), Vector2(278, 284)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jrtq"]
_data = {
"RESET": SubResource("Animation_ejbjx"),
"move_the_damn_ball": SubResource("Animation_shdmh")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_eojps")

[node name="TileMap" parent="." instance=ExtResource("1_8beo2")]
position = Vector2(-1, 10)

[node name="CharacterBody2D" parent="." instance=ExtResource("2_idu52")]
position = Vector2(388, 402)
scale = Vector2(1.5, 1.5)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(-1.33333, 0)
zoom = Vector2(4, 4)

[node name="CanvasLayer" parent="CharacterBody2D/Camera2D" instance=ExtResource("4_cgumm")]

[node name="LambMemory" parent="CharacterBody2D/Camera2D" instance=ExtResource("6_g3u1m")]
position = Vector2(-98.57, -56.76)
scale = Vector2(0.171, 0.171)

[node name="little_moving_thing" parent="." instance=ExtResource("4_o05bu")]
position = Vector2(184, 349)

[node name="AnimationPlayer" type="AnimationPlayer" parent="little_moving_thing"]
libraries = {
"": SubResource("AnimationLibrary_0jrtq")
}
autoplay = "move_the_damn_ball"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
